--- a/updatelog.html
+++ b/updatelog.html
@@ -7,14 +7,14 @@
 
 <body>
     <h1>
-        2.5.0.2更新了哪些内容？
+        该版本更新了哪些内容？
     </h1>
     <ul>
-        <li>手机投屏功能调整。</li>
-        <li>修复部分错误笔刷。</li>
-          <li>支持背景自定义颜色。</li>
-          <li>新增颜色罗盘。</li>
-        <li>倒计时支持铃声选择。</li>
-       <li>-在此之后，将会暂停更新新功能，除非遇到致命bug会修下，6月见！</li>
+        <li>xxxxx</li>
+        <li>xxxxxxx</li>
+          <li>xxxxxxx</li>
+          <li>xxxxxx</li>
+        <li>xxxxxxx</li>
+       <li>-感谢大家的耐心等待！</li>
     </ul>
 </body>
