--- a/updatelog.html
+++ b/updatelog.html
@@ -10,11 +10,11 @@
         该版本更新了哪些内容？
     </h1>
     <ul>
-        <li>xxxxx</li>
-        <li>xxxxxxx</li>
-          <li>xxxxxxx</li>
-          <li>xxxxxx</li>
-        <li>xxxxxxx</li>
+        <li>修复了批注模式圆锥的错误方法绑定。</li>
+        <li>修复了切换为鼠标崩溃的问题。</li>
+          <li>修复了部分课堂工具的错位问题。</li>
+          <li>修复了墨迹擦失效问题</li>
+        <li>精简了部分屎山代码</li>
        <li>-感谢大家的耐心等待！</li>
     </ul>
 </body>
