--- a/updatelog.html
+++ b/updatelog.html
@@ -10,8 +10,8 @@
         该版本更新了哪些内容？
     </h1>
     <ul>
-        <li>修复了批注模式圆锥的错误方法绑定。</li>
-        <li>修复了切换为鼠标崩溃的问题。</li>
+        <li>此版本用于测试AutoUpdater更新服务是否正常。</li>
+        <li>下个正式版本将于后续推送。</li>
           <li>修复了部分课堂工具的错位问题。</li>
           <li>修复了墨迹擦失效问题</li>
         <li>精简了部分屎山代码</li>
