--- a/updatelog.html
+++ b/updatelog.html
@@ -12,9 +12,9 @@
     <ul>
         <li>此版本用于测试AutoUpdater更新服务是否正常。</li>
         <li>下个正式版本将于后续推送。</li>
-          <li>修复了部分课堂工具的错位问题。</li>
-          <li>修复了墨迹擦失效问题</li>
-        <li>精简了部分屎山代码</li>
+          <li>新版本内的更新内容前瞻见相关动态</li>
+          <li>感谢各位老师对ICA For WSZYZ的支持！</li>
+        <li>我们将继续努力 为大家提供智慧教学新方案！</li>
        <li>-感谢大家的耐心等待！</li>
     </ul>
 </body>
