--- a/updatelog.html
+++ b/updatelog.html
@@ -15,6 +15,6 @@
           <li>新版本内的更新内容前瞻见相关动态</li>
           <li>感谢各位老师对ICA For WSZYZ的支持！</li>
         <li>我们将继续努力 为大家提供智慧教学新方案！</li>
-       <li>-感谢大家的耐心等待！</li>
+       <li>感谢大家的耐心等待！</li>
     </ul>
 </body>
