--- a/updatelog.html
+++ b/updatelog.html
@@ -7,12 +7,14 @@
 
 <body>
     <h1>
-        该版本更新了哪些内容？
+        我们检测到了更新，现推送给您。
     </h1>
     <ul>
-        <li>此版本用于测试AutoUpdater更新服务是否正常。</li>
-        <li>下个正式版本将于后续推送。</li>
-          <li>新版本内的更新内容前瞻见相关动态</li>
+        <li>前言:</li>
+        <li>当前版本只供测试AutoUpdater是否正常运转。</li>
+          <li>您可以选择忽略此版本or更新到新版本。</li>
+          <li>新版本包括新增荧光笔&激光笔等若干功能</li>
+          <li>将于不久后为大家推送。</l>
           <li>感谢各位老师对ICA For WSZYZ的支持！</li>
         <li>我们将继续努力 为大家提供智慧教学新方案！</li>
        <li>感谢大家的耐心等待！</li>
