--- a/updatelog.html
+++ b/updatelog.html
@@ -7,12 +7,13 @@
 
 <body>
     <h1>
-        我们检测到了更新，现推送给您。
+        好久不见，甚是想念。
     </h1>
     <ul>
-        <li>前言:</li>
-        <li>当前版本只供测试AutoUpdater是否正常运转。</li>
-          <li>您可以选择忽略此版本or更新到新版本。</li>
+        <li>经过了漫长的等待，ICA For WSZYZ终于迎来了新版本更新</li>
+        <li>请注意，当前更新窗口提供的版本仅适配学校新进的鸿合·希沃机型设备，若您为跨域设备，请看下文。</li>
+          <li>跨域设备新版本请打开后面的链接获取:</li>
+<a href=“https://wszyzica.github.io/update/index.html">获取跨域设备画板新版本</a>
           <li>新版本包括新增荧光笔&激光笔等若干功能</li>
           <li>将于不久后为大家推送。</l>
           <li>感谢各位老师对ICA For WSZYZ的支持！</li>
