--- a/updatelog.html
+++ b/updatelog.html
@@ -12,9 +12,12 @@
     <ul>
         <li>经过了漫长的等待，ICA For WSZYZ终于迎来了新版本更新</li>
         <li>请注意，当前更新窗口提供的版本仅适配学校新进的鸿合·希沃机型设备，若您为跨域设备，请看下文。</li>
-          <li>跨域设备新版本请打开后面的链接获取:</li>
+          <li>跨域设备新版本请打开下方链接获取:</li>
 <a href=“https://wszyzica.github.io/update/index.html">获取跨域设备画板新版本</a>
-          <li>新版本包括新增荧光笔&激光笔等若干功能</li>
+<h2>
+        新版本更新内容。
+    </h2>
+<li>新版本包括新增荧光笔&激光笔等若干功能</li>
           <li>将于不久后为大家推送。</l>
           <li>感谢各位老师对ICA For WSZYZ的支持！</li>
         <li>我们将继续努力 为大家提供智慧教学新方案！</li>
