--- a/updatelog.html
+++ b/updatelog.html
@@ -13,7 +13,7 @@
         <li>经过了漫长的等待，ICA For WSZYZ终于迎来了新版本更新</li>
         <li>请注意，当前更新窗口提供的版本仅适配学校新进的鸿合·希沃机型设备，若您为跨域设备，请看下文。</li>
           <li>跨域设备新版本请打开下方链接获取:</li>
-<a href=“/index.html">获取跨域设备画板新版本</a>
+<a href=index.html>获取跨域设备画板新版本</a>
 <h2>新版本更新内容:</h2>
 <li>[新增]新增插入图片功能，并可以随墨迹文件保存</li>
 <li>[新增]新增荧光笔功能(跨域机型新增)，标记重难点，就在此刻。</li>
