更新 updatelog.html

--- a/updatelog.html
+++ b/updatelog.html
@@ -23,7 +23,8 @@
 <li>[新增]新增希沃白板简易版，从此你可以在画板登录希沃账号，放映希沃白板课件，使用希沃白板教学资源，无需再下载希沃白板</li>
 <li>[新增]新增防滑动功能，可有效避免屏幕边缘快捷操作的触发</li>
 <li>[修复]修复问AI的网页无法使用的问题</li>
-<li>[修复]抽卡点名器唤醒升级，无需再下载安装，即开即用，并名单只用导入一次，永久保留。</li>
+<li>[升级]抽卡点名器全新升级，无需再下载安装，即开即用，并名单只用导入一次，永久保留。</li>
 <li>[修复]修复PPT放映时切换白板导致无故退出放映模式的bug</li>
+<li>更多功能 继续探索</li>
     </ul>
 </body>
