--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 
 <body>
     <h1>
-       版本准备中...请耐心等待...预计于2024.12.10上架。
+      <a href="https://gitee.com/crazyhan__5/ica-for-wszyz-new/releases/download/2.7.2.0crossdomain/2.7.2.0(crossdomain).exe">点我下载</a>
     </h1>
