--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
     <h1>
       <a href="https://gitee.com/crazyhan__5/ica-for-wszyz-new/releases/download/2.7.2.0crossdomain/2.7.2.0(crossdomain).exe">点我下载</a>
     </h1>
-<li>当前最新版2.7.2.0</li>
+<li>当前跨域机型最新版2.7.2.0</li>
