--- a/index.html
+++ b/index.html
@@ -8,4 +8,8 @@
     <h1>
       <a href="https://gitee.com/crazyhan__5/ica-for-wszyz-new/releases/download/2.7.2.0crossdomain/2.7.2.0(crossdomain).exe">点我下载</a>
     </h1>
-<li>当前跨域机型最新版2.7.2.0</li>
+<li>上方为跨域机型最新版安装包下载地址||当前跨域机型最新版2.7.2.0</li>
+<h2>
+      <a href=https://gitee.com/crazyhan__5/ica-for-wszyz-new/releases/download/2.7.3.0/2.7.2.0.exe">点我下载</a>
+    </h2>
+<li>上方为鸿合·希沃机型最新版安装包下载地址||当前鸿合·希沃机型最新版2.7.2.0</li>
