--- a/updatelog.html
+++ b/updatelog.html
@@ -15,6 +15,8 @@
           <li>跨域设备新版本请打开下方链接获取:</li>
 <a href=index.html>获取跨域设备画板新版本</a>
 <h2>新版本更新内容:</h2>
+<li>本次修复了Autoupdate打架的问题</li>
+<li>以下是上次更新内容</li>
 <li>[新增]新增插入图片功能，并可以随墨迹文件保存</li>
 <li>[新增]新增荧光笔功能(跨域机型新增)，标记重难点，就在此刻。</li>
 <li>[新增]新增功能文字注释开关，还您最简洁的使用体验。</li>
